<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/event_description"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/event_image_view"
            android:layout_width="80dp"
            android:layout_below="@id/event_description"
            android:layout_marginTop="40dp"
            android:layout_height="80dp"/>

        <TextView
            android:id="@+id/event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:text="@string/event_type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_risk_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_type"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/risk_level"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_risk_level"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_location"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/event_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_location"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/region"
            android:textSize="14sp" />



        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/event_description"
            android:layout_marginTop="150dp">



            <Button
                android:id="@+id/disapprove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disapprove"
                android:layout_weight="1"
                android:drawableLeft="@drawable/baseline_thumb_down_off_alt_24"
                android:backgroundTint="@color/red"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/approve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approve"
                android:layout_weight="1"
                android:drawableLeft="@drawable/baseline_thumb_up_24"
                android:backgroundTint="#4CAF50"
                android:layout_marginStart="8dp" />



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/button_layout"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/add_comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Add Comment"
                android:drawableLeft="@drawable/baseline_add_comment_24"
                android:backgroundTint="@color/blue"
                android:textColor="@android:color/white"/>


            <LinearLayout
                android:id="@+id/comments_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_comment_button"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btn_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/Show_Comments"/>

            <Button
                android:id="@+id/btn_hide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/Hide_Comments"/>


        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments_button_layout"
                android:layout_marginTop="20dp"
                android:scrollbars="vertical" />


        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>
