<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_title"
        android:fontFamily="sans-serif-thin"
        android:textSize="34sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/homepage_info"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/homepage_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/homepage_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
