<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/light_blue"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter_by_date"
        android:fontFamily="sans-serif-thin"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAppearance="?android:textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sort_old_to_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:text="@string/from_old_to_new" />

        <Button
            android:id="@+id/btn_sort_new_to_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/from_new_to_old" />

    </RelativeLayout>

</LinearLayout>
