<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/event_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/location_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:drawableLeft="@drawable/baseline_location_on_24"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:drawableLeft="@drawable/baseline_edit_note_24"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/risk_level_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/region_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/baseline_photo_camera_24"
        android:backgroundTint="#4CAF50"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/event_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_margin="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event_button_text"
        android:textStyle="bold"
        android:backgroundTint="#2196F3"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"/>

</LinearLayout>
