<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="30dp"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/baseline_supervised_user_circle_24"
        android:hint="@string/enter_user_name"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />



    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:hint="@string/enter_password"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:layout_below="@+id/user_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/black"
        android:text="@string/login"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:cornerRadius="0dp"
        android:layout_below="@+id/login_btn"
        android:backgroundTint="@color/blue"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textStyle="bold" />



</RelativeLayout>
