<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EventsInfo">

    <TextView
        android:id="@+id/titleEventsInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_info_title"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/titleMyEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_events_title"
        android:textSize="30sp"
        android:layout_below="@id/titleEventsInformation"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/baseline_event_note"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/numEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="24sp"
        android:layout_below="@id/titleMyEvents"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/approve_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approved_events_title"
        android:textSize="30sp"
        android:layout_below="@id/numEvents"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/baseline_event_available_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/numApprove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="24sp"
        android:layout_below="@id/approve_events"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />



    <TextView
        android:id="@+id/decline_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/declined_events_title"
        android:textSize="30sp"
        android:layout_below="@id/numApprove"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/baseline_event_busy_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/numDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="24sp"
        android:layout_below="@id/decline_events"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

</RelativeLayout>
